@@ -23,7 +23,7 @@
 #define HDHOMERUN_CONTROL_CONNECT_TIMEOUT 2500
 #define HDHOMERUN_CONTROL_SEND_TIMEOUT 2500
 #define HDHOMERUN_CONTROL_RECV_TIMEOUT 2500
-#define HDHOMERUN_CONTROL_UPGRADE_TIMEOUT 20000
+#define HDHOMERUN_CONTROL_UPGRADE_TIMEOUT 30000
 
 struct hdhomerun_control_sock_t {
 	uint32_t desired_device_id;
